# Predictive-Nav-Mppi

./: README.md
benchmark_results/20260305_012443/: custom_g0_r0.json  custom_g0_r1.json  custom_g0_r2.json  custom_g1_r0.json
benchmark_results/20260305_013208/: custom_g0_r0.json
benchmark_results/20260305_020147/: custom_g0_r0.json
benchmark_results/20260305_021021/: custom_g0_r0.json
benchmark_results/20260305_021617/: custom_g0_r0.json  custom_g1_r0.json  results.csv  standard_g0_r0.json  standard_g1_r0.json  summary.json
benchmark_results/20260305_023316/: custom_g0_r0.json  custom_g1_r0.json  results.csv  standard_g0_r0.json  standard_g1_r0.json  summary.json
benchmark_results/20260305_024937/: custom_g0_r0.json  custom_g1_r0.json  results.csv  standard_g0_r0.json  standard_g1_r0.json  summary.json
maps/: empty.yaml  labyrinth_turns_map.pgm  labyrinth_turns_map.yaml  long_corridor_map.pgm  long_corridor_map.yaml  nonlinear_corridor_map.pgm  nonlinear_corridor_map.yaml  room_map.pgm  small_room_map.pgm  small_room_map.yaml
nav2_configs/: nav2_mppi.yaml  nav2_params_full.yaml  params.yaml
patches/: apply_hunav_robot_force_scale.py  hunav_actor_scale.patch  hunav_actor_z_offset.patch  hunav_behavior_tree_path.patch  hunav_reset_agents_deterministic.patch
scripts/: generate_labyrinth_turns_map.py  generate_long_corridor_map.py  generate_nonlinear_corridor_map.py  kill_sim.sh  run_parallel_benchmark.sh
src/hunav_extension/: CMakeLists.txt  package.xml
src/hunav_extension/behavior_trees/: corridor_agents__agent_10_bt.xml  corridor_agents__agent_11_bt.xml  corridor_agents__agent_12_bt.xml  corridor_agents__agent_13_bt.xml  corridor_agents__agent_14_bt.xml  corridor_agents__agent_15_bt.xml  corridor_agents__agent_16_bt.xml  corridor_agents__agent_17_bt.xml  corridor_agents__agent_18_bt.xml  corridor_agents__agent_19_bt.xml  corridor_agents__agent_1_bt.xml  corridor_agents__agent_20_bt.xml  corridor_agents__agent_2_bt.xml  corridor_agents__agent_3_bt.xml  corridor_agents__agent_4_bt.xml  corridor_agents__agent_5_bt.xml  corridor_agents__agent_6_bt.xml  corridor_agents__agent_7_bt.xml  corridor_agents__agent_8_bt.xml  corridor_agents__agent_9_bt.xml  custom_agents__agent_1_bt.xml  custom_agents__agent_2_bt.xml
src/hunav_extension/behavior_trees/labyrinth_turns15/: labyrinth_turns15__agent_10_bt.xml  labyrinth_turns15__agent_11_bt.xml  labyrinth_turns15__agent_12_bt.xml  labyrinth_turns15__agent_13_bt.xml  labyrinth_turns15__agent_14_bt.xml  labyrinth_turns15__agent_15_bt.xml  labyrinth_turns15__agent_16_bt.xml  labyrinth_turns15__agent_17_bt.xml  labyrinth_turns15__agent_18_bt.xml  labyrinth_turns15__agent_19_bt.xml  labyrinth_turns15__agent_1_bt.xml  labyrinth_turns15__agent_20_bt.xml  labyrinth_turns15__agent_21_bt.xml  labyrinth_turns15__agent_22_bt.xml  labyrinth_turns15__agent_23_bt.xml  labyrinth_turns15__agent_24_bt.xml  labyrinth_turns15__agent_25_bt.xml  labyrinth_turns15__agent_2_bt.xml  labyrinth_turns15__agent_3_bt.xml  labyrinth_turns15__agent_4_bt.xml  labyrinth_turns15__agent_5_bt.xml  labyrinth_turns15__agent_6_bt.xml  labyrinth_turns15__agent_7_bt.xml  labyrinth_turns15__agent_8_bt.xml  labyrinth_turns15__agent_9_bt.xml
src/hunav_extension/behavior_trees/nonlinear_maze15/: BTRegularNav.xml  nonlinear_maze15__agent_10_bt.xml  nonlinear_maze15__agent_11_bt.xml  nonlinear_maze15__agent_12_bt.xml  nonlinear_maze15__agent_13_bt.xml  nonlinear_maze15__agent_14_bt.xml  nonlinear_maze15__agent_15_bt.xml  nonlinear_maze15__agent_1_bt.xml  nonlinear_maze15__agent_2_bt.xml  nonlinear_maze15__agent_3_bt.xml  nonlinear_maze15__agent_4_bt.xml  nonlinear_maze15__agent_5_bt.xml  nonlinear_maze15__agent_6_bt.xml  nonlinear_maze15__agent_7_bt.xml  nonlinear_maze15__agent_8_bt.xml  nonlinear_maze15__agent_9_bt.xml
src/my_configs/: dwb.yaml  hunav_agents.yaml
src/nav2_controllers/: CMakeLists.txt  mppi_critics.xml  nav2_controllers.xml  package.xml
src/nav2_controllers/include/nav2_controllers/: mppi_controller.hpp  mppi_nav2_controller.hpp  predicted_people_critic.hpp
src/nav2_controllers/params/: nav2_params.yaml
src/nav2_controllers/src/: mppi_controller.cpp  mppi_nav2_controller.cpp  predicted_people_critic.cpp
src/predictive_nav_mppi/: package.xml  setup.cfg  setup.py
src/predictive_nav_mppi/config/: benchmark_config.yaml  hunav_agents.yaml  hunav_agents_corridor_params.yaml  hunav_agents_labyrinth_params.yaml  hunav_agents_nonlinear_params.yaml  hunav_agents_params.yaml  nav2_params_full.yaml  nav2_params_full_standard_mppi.yaml  people_predictor.yaml  room_map.yaml
src/predictive_nav_mppi/launch/: hunav_people_only.launch.py  sim_nav2.launch.py
src/predictive_nav_mppi/predictive_nav_mppi/: benchmark_episode.py  benchmark_people_predictors.py  benchmark_session.py  compute_agents_proxy.py  curate_people_dataset.py  inspect_scene_patch.py  kf_cv.py  parallel_benchmark_runner.py  people_kf_predictor.py  people_predictor.py  publish_initial_pose.py  record_people_dataset.py  reset_hunav_agents.py  run_benchmark.py  run_curated_benchmark_suite.py  run_paired_benchmark.py  scene_context.py  train_residual_predictor.py
src/predictive_nav_mppi/predictive_nav_mppi/models/: __init__.py  best_model.pt  kalman_residual_net.py  simple.ipynb  social_gru.py  social_vae.py
src/predictive_nav_mppi/rviz/: nav2_topdown.rviz
src/predictive_nav_mppi/test/: test_people_kf_predictor.py
src/room_world/: package.xml  setup.cfg  setup.py
src/room_world/room_world/launch/: sim_room.launch.py
src/room_world/room_world/worlds/: labyrinth_turns.sdf  long_corridor.sdf  nonlinear_corridor.sdf  room_box.sdf
