<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hunav_extension</name>
  <version>0.0.0</version>
  <description>Project-local HuNav extension assets (behavior trees, launch glue)</description>
  <maintainer email="danbel1kov@todo.todo">danbel1kov</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hunav_agent_manager</exec_depend>
  <exec_depend>hunav_gazebo_wrapper</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
