<?xml version="1.0"?>
<package format="3">
  <name>nav2_controllers</name>
  <version>0.0.1</version>
  <description>Custom minimal controllers and demo nodes</description>

  <!-- Обязателен для ament_cmake-пакета -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Зависимости  -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_mppi_controller</depend>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <export>
    <!-- Сообщаем тип сборки -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
