<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>predictive_nav_mppi</name>
  <version>0.0.0</version>
  <description>Gazebo + Nav2 + RViz bringup for Turtlebot3 + MPPI controller</description>
  <maintainer email="danbel1kov@todo.todo">danbel1kov</maintainer>
  <license>Apache-2.0</license>

  <!-- build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime deps -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav2_bringup</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>people_msgs</depend>
  <depend>hunav_msgs</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- Optional: HUNAV people simulation -->
  <exec_depend>hunav_agent_manager</exec_depend>
  <exec_depend>hunav_extension</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
